@@ -59,7 +59,8 @@ LANGUAGES =			\
 
 STYLES =			\
 	gvim.xml		\
-	kate.xml
+	kate.xml		\
+	tango.xml
 
 languagesdir = $(datadir)/gtksourceview-2.0/language-specs
 languages_DATA = $(LANGUAGES) language.rng language2.rng language.dtd \
