@@ -1,0 +1,117 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+ Copyright (C) 2006-2007 GtkSourceView team
+ Author: Michael Monreal <michael.monreal@gmail.com>
+
+ This library is free software; you can redistribute it and/or
+ modify it under the terms of the GNU Library General Public
+ License as published by the Free Software Foundation; either
+ version 2 of the License, or (at your option) any later version.
+
+ This library is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ Library General Public License for more details.
+
+ You should have received a copy of the GNU Library General Public
+ License along with this library; if not, write to the
+ Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ Boston, MA 02111-1307, USA.
+
+-->
+<style-scheme id="tango" _name="Tango" version="1.0">
+  <author>Michael Monreal</author>
+  <_description>Color scheme using Tango color palette</_description>
+
+  <!-- Tango colors -->
+  <color name="butter1"                     value="#fce94f"/>
+  <color name="butter2"                     value="#edd400"/>
+  <color name="butter3"                     value="#c4a000"/>
+  <color name="chameleon1"                  value="#8ae234"/>
+  <color name="chameleon2"                  value="#73d216"/>
+  <color name="chameleon3"                  value="#4e9a06"/>
+  <color name="orange1"                     value="#fcaf3e"/>
+  <color name="orange2"                     value="#f57900"/>
+  <color name="orange3"                     value="#ce5c00"/>
+  <color name="skyblue1"                    value="#729fcf"/>
+  <color name="skyblue2"                    value="#3465a4"/>
+  <color name="skyblue3"                    value="#204a87"/>
+  <color name="plum1"                       value="#ad7fa8"/>
+  <color name="plum2"                       value="#75507b"/>
+  <color name="plum3"                       value="#5c3566"/>
+  <color name="chocolate1"                  value="#e9b96e"/>
+  <color name="chocolate2"                  value="#c17d11"/>
+  <color name="chocolate3"                  value="#8f5902"/>
+  <color name="scarletred1"                 value="#ef2929"/>
+  <color name="scarletred2"                 value="#cc0000"/>
+  <color name="scarletred3"                 value="#a40000"/>
+  <color name="aluminium1"                  value="#eeeeec"/>
+  <color name="aluminium2"                  value="#d3d7cf"/>
+  <color name="aluminium3"                  value="#babdb6"/>
+  <color name="aluminium4"                  value="#888a85"/>
+  <color name="aluminium5"                  value="#555753"/>
+  <color name="aluminium6"                  value="#2e3436"/>
+ 
+  <!-- legacy styles for old lang files: do NOT use them in lang files -->
+  <style name="Others"                      foreground="chameleon3" bold="true"/>
+  <style name="Others 2"                    foreground="chameleon3"/>
+  <style name="Others 3"                    foreground="plum3"/>
+
+  <!-- global defines -->
+  <style name="bracket-match"               foreground="aluminium1" background="aluminium3" bold="true"/>
+  <style name="bracket-mismatch"            foreground="aluminium1" background="scarletred3" bold="true"/>
+
+  <style name="def:base-n-integer"          foreground="plum1"/>
+  <style name="def:decimal"                 foreground="plum1"/>
+  <style name="def:character"               foreground="plum1"/>
+  <style name="def:floating-point"          foreground="plum1"/>
+  <style name="def:string"                  foreground="plum1"/>
+
+  <style name="def:data-type"               foreground="chameleon3" bold="true"/>
+  <style name="def:function"                foreground="chameleon3"/>
+  <style name="def:keyword"                 foreground="scarletred3" bold="true"/>
+
+  <style name="def:comment"                 foreground="skyblue2"/>
+  <style name="def:net-address-in-comment"  foreground="skyblue2" italic="true" underline="true"/>
+  <style name="def:note"                    foreground="skyblue2" background="butter1" bold="true"/>
+  <style name="def:shebang"                 foreground="skyblue2" bold="true"/>
+  <style name="def:doc-comment-element"     italic="true"/>
+
+  <style name="def:error"                   background="scarletred1" bold="true"/>
+  <style name="def:escape"                  foreground="orange2"/>
+
+  <style name="def:preprocessor"            foreground="chocolate2"/>
+
+  <!-- Language specific -->
+  <style name="c:preprocessor"              use-style="def:preprocessor"/>
+
+  <style name="changelog:email"             use-style="def:net-address-in-comment"/>
+
+  <style name="diff:added-line"             use-style="chameleon3"/>
+  <style name="diff:changed-line"           use-style="c:preprocessor"/>
+  <style name="diff:removed-line"           use-style="plum3"/>
+  <style name="diff:diff-file"              use-style="def:data-type"/>
+  <style name="diff:location"               use-style="def:keyword"/>
+  
+  <style name="diff:special-case"           use-style="def:string"/>
+
+  <style name="js:object"                   foreground="chameleon3" bold="true"/>
+  <style name="js:constructors"             foreground="chameleon3"/>
+
+  <style name="latex:display-math"          use-style="plum3"/>
+  <style name="latex:command"               foreground="chameleon3" bold="true"/>
+  <style name="latex:include"               use-style="c:preprocessor"/>
+
+  <style name="python:builtins"             use-style="Others"/>
+
+  <style name="sh:variable1"                use-style="plum3"/>
+  <style name="sh:variable2"                use-style="chameleon3"/>
+
+  <style name="xml:attribute-name"          foreground="plum3"/>
+  <style name="xml:tags"                    foreground="chameleon3"/>
+  <style name="xml:namespace"               foreground="chameleon3" bold="true"/>
+  <style name="xml:doctype"                 use-style="c:preprocessor"/>
+  <style name="xml:cdata-delim"             use-style="c:preprocessor"/>
+  <style name="xml:processing-instruction"  use-style="c:preprocessor"/>
+</style-scheme>
