@@ -1,5 +1,10 @@
 2007-07-03  Paolo Borelli  <pborelli@katamail.com>
 
+	* gtksourceview/language-specs/tango.xml: first cut of a 
+	tango style scheme, contributed by Michael Monreal.
+
+2007-07-03  Paolo Borelli  <pborelli@katamail.com>
+
 	* gtksourceview/language-specs/scheme.lang: escape " in strings
 	* gtksourceview/language-specs/ocl.lang: New, contributed by
 	Mario Carrión. Bug #345911.
